# SKB_MO_Test

./: .gitignore  CMakeLists.txt  readme.md
Client/: CMakeLists.txt
Client/Src/: client.cpp  client.h  main.cpp
Client/Src/GUI/: client.ui  client_gui.cpp  client_gui.h  resources.qrc
Server/: CMakeLists.txt
Server/Src/: main.cpp  server.cpp  server.h
Server/Src/GUI/: server.ui  server_gui.cpp  server_gui.h
Src/: main.cpp
Src/Client/: client.cpp  client.h  client_gui.h
Src/Server/: server.cpp  server.h  server_gui.h
